tests/toy/neg/000498_mutation.toylang
program a = { a = else 0; } .
